<resources>
    <string name="app_name">E-Learning</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="check_internet">Please check your internet connection</string>
    <string name="server_url">http://apielearn.3eit.in/api/</string>
    <string name="image_url">http://apielearn.3eit.in</string>
    <string name="video_url">http://apielearn.3eit.in/</string>
    <string name="api_key">987!elrn62asdfg32</string>
    <string name="title_activity_main">E-Learning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Elearning</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_video">Videos</string>
    <string name="menu_fet_video">Featured Videos</string>
    <string name="menu_doubt">Ask A Doubt</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_scan_book">Search A Book</string>
    <string name="menu_share">Share</string>
    <string name="menu_download">Download</string>
    <string name="menu_book">Books</string>
    <string name="menu_logout">Logout</string>

    <string name="title_subjects">Subjects</string>
    <string name="title_recent_videos">Recent Videos</string>
    <string name="top_videos">Top Videos</string>
    <string name="latest_videos">Latest Videos By Teachers</string>

    <string name="chapter">Chapter List</string>
    <string name="subject">Subject</string>
    <string name="videos">Videos</string>
    <string name="books">Books</string>
    <string name="activity">Activity</string>

    <string name="videosAllSubject">Videos All Subject</string>
    <string name="ebooksAllSubject">Ebooks All Subject</string>
    <string name="featured_videos">Featured Videos</string>

    <string name="password">Password</string>
    <string name="repassword">Re-enter Password</string>
    <string name="language">Language</string>
    <string name="update">Save Changes</string>
    <string name="errorPasswordNotMatch">Both passwords do not match</string>
    <string name="errorLanguage">Please select a language</string>
    <string name="dataupdate">User data updated successfully. Please login again</string>
    <string name="unabletofetchdata">Unable to fetch data</string>

    <string name="activity_type">Type: </string>
    <string name="total_marks">Total: </string>
    <string name="total_questions">Questions: </string>
    <string name="time_reequired">Time: </string>

    <string name="submit">Submit</string>
    <string name="outof">Out Of</string>
    <string name="question">Question</string>
    <string name="youG">You\'ve got</string>
    <string name="inThisActivity">in this activity</string>
    <string name="questionAttemped">Question Attempted:</string>
    <string name="rightQuestions">Right Questions:</string>
    <string name="wrongQuestions">Wrong Questions:</string>
    <string name="error_option">Please choose an option</string>

    <string name="default_notification_channel_id">123</string>
    <string name="fcm_message">FCM Message</string>

    <string name="err_barcode">Could not set up the detector!</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="scan_message">Please scan book isbn using camera of your device</string>
    <string name="menu_contact">Contact Us</string>
    <string name="contact_us">Get In Touch</string>
    <string name="write_to_us">WRITE TO US</string>
    <string name="write_desc">We are committed to resolve any query with in two working days!</string>
    <string name="raise_a_request">Raise A Request</string>

    <string name="call_us">PHONE</string>
    <string name="phone_desc">%c(call charges applicable)\nKeep your Username handy for verification!</string>
    <string name="call_support">Call Support</string>
    <string name="welcome_message">Dear %n,\nWelcome to Elearning!</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="message">Your Query</string>
    <string name="send">Send</string>
    <string name="call_center_no">9755014214</string>
    <string name="phone_call_permission">Access to phone call needed for this operation</string>

    <string name="check_name">Please enter your name</string>
    <string name="check_message">Please enter your message</string>
    <string name="message_saved">Your message has been sent successfully</string>
    <string name="message_error">Unable to send message this time</string>

    <string name="your_doubt">Your Doubt</string>
    <string name="check_subject">Please enter subject of your doubt</string>

    <string name="activity_path">/ElearningContent/Chapter/activity.png</string>
    <string name="activity1_path">/ElearningContent/Chapter/activity1.png</string>
    <string name="chapter_path">/ElearningContent/Chapter/chapter.png</string>
    <string name="books_path">/ElearningContent/Chapter/books.png</string>
    <string name="ebook_path">/ElearningContent/Chapter/ebook.png</string>
    <string name="mail_path">/ElearningContent/Chapter/mail.png</string>
    <string name="video_path">/ElearningContent/Chapter/video.png</string>

    <string name="motivational_video">Motivational Video</string>
    <string name="featured_video">Featured Video</string>

    <string name="my_favourite">My Favourite</string>
    <string name="video">Video</string>
    <string name="book">E-Book</string>

</resources>
