<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:background="@color/txtShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:drawableLeft="@drawable/ic_create_black_24dp"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingBottom="10dp"
                android:text="@string/write_to_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/write_desc"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnWrite"
                android:background="@color/colorButtonBG"
                android:textColor="@color/colorButtonText"
                android:padding="5dp"
                android:layout_gravity="end"
                android:text="@string/raise_a_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:background="@color/txtShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:paddingBottom="10dp"
                android:text="@string/call_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtPhoneDesc"
                android:text=""
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnPhone"
                android:background="@color/colorButtonBG"
                android:textColor="@color/colorButtonText"
                android:padding="5dp"
                android:layout_gravity="end"
                android:text="@string/call_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>